# vipirc

./: .gitignore  CMakeLists.txt
example/: example1.vipir
include/lexer/: Lexer.h  SourceLocation.h  Token.h
source/: main.cpp
source/lexer/: Lexer.cpp  Token.cpp
